# event-egress-python

./: .gitignore  README.md  environment.txt  main.py  pyproject.toml  requirements.txt  tasks.ps1
config/: default.json
experiments/: _bootstrap.py  _stats.py  render_ieee_figures.py  run_all.py  run_baselines.py  run_capacity_stress.py  run_clipped_lognormal_diagnostic.py  run_compliance_sensitivity.py  run_cvar_budget_sensitivity.py  run_fallback_sensitivity.py  run_ieee_figure_pipeline.py  run_incident_fallback.py  run_information_regime_map.py  run_information_value_validation.py  run_model_mismatch.py  run_nonstationary_grid.py  run_regime_map.py  run_residual_spread_ablation.py  run_runtime_benchmark.py  run_sensor_ablation.py  run_surrogate_validation.py  run_tail_validation.py  run_time_step_sensitivity.py  run_travel_time_context.py  run_travel_time_context_variants.py  run_weight_sensitivity.py
scripts/: check_ieee_figure_data.py  verify.py
src/egress_sim/: __init__.py  analysis.py  config.py  figure_protocol.py  ieee_style.py  model.py  plotting.py  policies.py  simulation.py  uncertainty.py
tests/: test_figure_protocol.py  test_model.py  test_outputs.py
